--- a/Exercises/Ch5/05_05/css-portfolio/index.html
+++ b/Exercises/Ch5/05_05/css-portfolio/index.html
@@ -131,17 +131,20 @@
 
       <!-- ************  CONTACT INFO / SOCIAL MEDIA  ************ -->
       <footer>
-        <div class="content-wrap">
-          <h2>Let's Keep in Touch!</h2>
+        <div>
+              <div class="content-wrap">
+                <h2>Let's Keep in Touch!</h2>
 
-          <!-- Social media and contact links. Add or remove any networks. -->
-          <ul>
-            <li><a href="mailto:email@example.com">email@example.com</a></li>
-            <li><a href="http://christinatruong.com" target="_blank">christinatruong.com</a></li>
-            <li><a href="http://twitter.com/christinatruong" target="_blank">Twitter</a></li>
-            <li><a href="#" target="_blank">LinkedIn</a></li>
-          </ul>
-        </div>
+                <!-- Social media and contact links. Add or remove any networks. -->
+                <ul class="contact-list">
+                  <li><a href="mailto:email@example.com">email@example.com</a></li>
+                  <li><a href="http://christinatruong.com" target="_blank">christinatruong.com</a></li>
+                  <li><a href="http://twitter.com/christinatruong" target="_blank">Twitter</a></li>
+                  <li><a href="#" target="_blank">LinkedIn</a></li>
+                </ul>
+              </div>
+         </div>
+
       </footer>
     </main>
   </body>
