--- a/Exercises/Ch8/08_02/css-portfolio/index.html
+++ b/Exercises/Ch8/08_02/css-portfolio/index.html
@@ -12,7 +12,7 @@
       <!-- ***************  ABOUT / PROFILE  **************** -->
       <header>
         <div class="content-wrap">
-          <h1>Christina Truong</h1>
+          <h1>Christina Tlruong</h1>
           <h2>Tech Educator + Front-end Developer</h2>
 
           <p>As a developer, I specialize in creating modular and scalable front-end architectures. As an educator, I focus on creating inclusive learning environments, instructor training and curriculum development.</p>
